# fluid-pad

./: README.md  TODO.md  development.py  drums.py  main.py  old.py  pyjam.py  pyproject.toml  requirements.txt  serve.py  test.py  test1.py  thread.py
docs/: launchpad.drawio
fluid_pad/: __main__.py  const.py  controller.py  midi.py  synth.py
fluid_pad/controllers/: main.py
fluid_pad/services/: drums.py  instrument.py  midi.py  synth.py
resources/midi/: loop1.mid  stangata.mid  sw.mid
src/: const.py  midi.py
tests/: test_fluid_pad.py  test_synth.py
utils/: log.py  midi.py  synth.py
